# agent-firewall-protocol

./: .gitignore  README.md  WHITEPAPER.md  afp_cli.py
daemon/: __init__.py  cli.py  dashboard.py  logger.py  proxy.py
daemon/static/: index.html
desktop/: README.md  agent_scanner.py  app.py  build_mac.py  build_win.py  config.py  proxy_manager.py  requirements.txt  tray.py
docs/: contributing.md
examples/: .gitkeep
examples/openclaw-skill/: SKILL.md
examples/openclaw-skill/rules/: custom-rules.yaml
examples/openclaw-skill/scripts/: check.py  setup.py
rules/: schema.yaml
rules/community/: .gitkeep
rules/core/: default-rules.yaml
sdk/python/: .gitkeep  README.md  pyproject.toml
sdk/python/examples/: basic_usage.py
sdk/python/src/afp/: __init__.py  firewall.py  models.py  patterns.py  rules.py
sdk/python/tests/: test_firewall.py  test_patterns.py  test_remote.py  test_rules.py
sdk/typescript/: .gitkeep
