[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "agent-firewall-protocol"
version = "0.1.0"
description = "Agent Firewall Protocol — runtime guardrails for AI agents"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = ["pyyaml>=6.0"]

[project.urls]
Homepage = "https://github.com/joevise/agent-firewall-protocol"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
